k8s/mailer/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mailer
  name: mailer
  namespace: csd
spec:
  ports:
  - name: http-app
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mailer
  type: ClusterIP
status:
  loadBalancer: {}
