k8s/mailer/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mailer
  namespace: csd
spec:
  host: mailer
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
