k8s/mailer/virtualservice.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mailer
spec:
  hosts:
  - mailer
  http:
  - route:
    - destination:
        host: mailer
        subset: v1
      weight: 100
    # - destination:
    #     host: coverage
    #     subset: v2
    #   weight: 100
